[package]
name = "cgi-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
regex = "1.10.3"
futures = "0.3.30"
log = "0.4.20"
bytes = "1.5.0"
hershell = {git = "https://forge.poipoi.org/hubert/hershell.git", branch = "master"}
tokio-util = "0.7.10"
