[package]
name = "cgi-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = "1"
http-body-util = "0.1"
hyper-util = "0.1"
regex = "1.10.3"
futures = "0.3.30"
log = "0.4.20"
bytes = "1.5.0"
hershell = {git = "https://github.com/hurlebouc/hershell.git", branch = "master"}
tokio-util = {version = "0.7.10", features = ["io"]}
