[package]
name = "cgi"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
hyper = "1"
hyper-util = { version = "0.1", features = ["tokio", "service", "server", "http1"] }
cgi-rs = { path = "../cgi-rs"}
tokio = "1.36.0"
tower = { version = "0.4.13"}
tower-http = { version = "0.5.2", features = ["timeout"] }
pin-project = "1.1.4"
tokio-util = {version = "0.7.10", features = ["io"]}
futures = "0.3.30"
